<resources>
    <string name="app_name">WaterWheels</string>

    <string name="yes">Yes</string>
    <string name="ok">OK</string>

    <string name="today_at_x">Today at %1$s</string>
    <string name="tomorrow_at_x">Tomorrow at %1$s</string>
    <string name="x_at_y">%1$s at %2$s</string>
    <string name="from_x">From: %1$s</string>z
    <string name="to_x">To: %1$s</string>
    <string name="a_to_b">%1$s to %2$s</string>
    <string name="loading_message">Fetching and analyzing posts from Facebook&#8230;</string>
    <string name="call">Call</string>
    <string name="text">Text</string>
    <string name="few_seconds_ago">A few seconds ago</string>
    <string name="click_post">Click the post to view it on Facebook!</string>
    <string name="price">$%1$d</string>

    <plurals name="x_mins">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>

    <plurals name="x_hrs">
        <item quantity="one">%d hr</item>
        <item quantity="other">%d hrs</item>
    </plurals>

    <string name="yesterday_at_x">Yesterday at %1$s</string>
    <string name="x_at_x">%1$s at %2$s</string>
    <string name="must_be_waterloo">You must be a Waterloo student to use this app!</string>
    <string name="better_way">A better way to carpool</string>
    <string name="no_network_connection">No network connection found</string>
    <string name="content_updated">Rides updated</string>
    <string name="filter">Filter</string>
    <string name="close">Close</string>
    <string name="clear">Clear</string>
    <string name="showing_all_rides">Showing All Rides</string>
    <string name="auto_refresh">Auto-Refresh</string>
    <string name="refresh_in_background">Refresh posts in the background</string>
    <string name="wifi_only">Wifi only</string>
    <string name="any_network">Wifi or data</string>
    <string name="not_now">Not now</string>
    <string name="account">Account</string>
    <string-array name="before_after">
        <item>Before</item>
        <item>After</item>
    </string-array>

    <string name="origin">Origin</string>
    <string name="destination">Destination</string>

    <string name="notifications">Notifications</string>
    <string name="notify_me_filter">Notify me when a new post matches my filter</string>
    <string name="vibrate">Vibrate</string>
    <string name="sound">Sound</string>
    <string name="light">Light</string>

    <string name="must_enable_refresh_title">Auto-refresh is not enabled</string>
    <string name="must_enable_refresh">
        In order to show notifications, auto-refresh must be enabled.\n\n
        Enable auto-refresh now?
    </string>

    <string name="new_ride">New ride</string>
    <string name="x_new_rides">%1$d new rides</string>
    <string name="offer_format">%1$s &#8594; %2$s, departs at %3$s</string>
    <string name="offer_format_multiple">%1$s &#8702; %2$s, departs at %3$s&#8230;</string>

    <string name="new_version">New Features In This Version</string>
    <string name="new_features_version_3">
        &#8226; Tab layout\n&#8226; Auto-refresh (enable in settings)\n&#8226; Bug fixes
    </string>
    <string name="new_features_version_6">
        &#8226; Filters persisted\n&#8226; Fewer duplicate offers\n&#8226; Get notified of new rides that match your filter\n\n
        Would you like to turn notifications on?
    </string>

</resources>
