<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    style="@style/Toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TextView
        android:id="@+id/timestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/price"
        android:text="Today @ 13:00"
        android:textColor="@android:color/white"
        android:textSize="@dimen/toolbar_text_size"
        android:textStyle="bold"/>

      <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:text="$15"
        android:textColor="@android:color/white"
        android:textSize="@dimen/toolbar_text_size"
        android:textStyle="bold"/>

    </RelativeLayout>

  </android.support.v7.widget.Toolbar>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layout_below="@+id/toolbar"
    android:layout_above="@+id/phone_layout_flat"
    android:layout_alignWithParentIfMissing="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingTop="8dp">

      <TextView
        android:id="@+id/click_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/click_post"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"/>

      <android.support.v7.widget.CardView
        android:id="@+id/post_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingBottom="8dp"
          android:paddingLeft="8dp"
          android:paddingRight="8dp"
          android:paddingTop="8dp">

          <ImageView
            android:id="@+id/profile_image"
            android:layout_width="48dp"
            android:layout_height="48dp"/>

          <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/profile_image"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="Lucy Goosey"
            android:textColor="#2C4388"
            android:textSize="16sp"
            android:textStyle="bold"/>

          <TextView
            android:id="@+id/post_created_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_name"
            android:layout_toRightOf="@+id/profile_image"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp"
            android:text="5 hours ago"
            android:textColor="@color/textSecondary"
            android:textSize="14sp"/>

          <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/post_created_time"
            android:layout_marginTop="4dp"
            android:text="Source post"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"/>

        </RelativeLayout>

      </android.support.v7.widget.CardView>

      <LinearLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
          android:id="@+id/phone_btn"
          style="@style/Button.Call"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginRight="8dp"
          android:layout_weight="1"
          android:drawableLeft="@drawable/ic_phone"
          android:gravity="center"
          android:padding="8dp"
          android:text="@string/call"
          android:textSize="28sp"/>

        <TextView
          android:id="@+id/sms_btn"
          style="@style/Button.Text"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="8dp"
          android:layout_weight="1"
          android:drawableLeft="@drawable/ic_text"
          android:gravity="center"
          android:padding="8dp"
          android:text="@string/text"
          android:textSize="28sp"/>

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <TextView
          android:id="@+id/origin"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="16dp"
          android:layout_weight="1"
          android:gravity="center_horizontal"
          android:text="From: Waterloo"
          android:textColor="@color/textPrimary"
          android:textSize="18sp"/>

        <TextView
          android:id="@+id/destination"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginRight="16dp"
          android:layout_weight="1"
          android:gravity="center_horizontal"
          android:text="To: Toronto"
          android:textColor="@color/textPrimary"
          android:textSize="18sp"/>

      </LinearLayout>

      <ImageView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    </LinearLayout>
  </ScrollView>

  <LinearLayout
    android:id="@+id/phone_layout_flat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:background="@android:color/white"
    android:elevation="24dp">

    <LinearLayout
      android:id="@+id/phone_btn_flat"
      android:layout_weight="1"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:background="?attr/selectableItemBackground">

      <ImageView
        android:id="@+id/phone_icon"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@null"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"/>

      <TextView
        style="@style/FlatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/call"/>

    </LinearLayout>

    <LinearLayout
      android:id="@+id/sms_btn_flat"
      android:layout_width="0dp"
      android:layout_weight="1"
      android:layout_height="match_parent"
      android:background="?attr/selectableItemBackground">

    <ImageView
      android:id="@+id/sms_icon"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:layout_width="32dp"
      android:layout_height="32dp"
      android:background="@android:color/transparent"
      android:contentDescription="@null"
      android:scaleType="centerInside"/>

    <TextView
      style="@style/FlatButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:text="@string/text"/>

    </LinearLayout>

  </LinearLayout>

</RelativeLayout>