<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            style="@style/Toolbar"
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:animateLayoutChanges="true"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:id="@+id/display_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/display_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:text="Waterloo to Toronto"
                        android:textSize="@dimen/toolbar_text_size" />

                    <TextView
                        android:id="@+id/time_display_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Feb 9 at 10PM"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/choice_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/origin_hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Origin"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:paddingRight="8dp" />

                        <Spinner
                            android:id="@+id/origin_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/destination_hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Destination"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:paddingRight="8dp" />

                        <Spinner
                            android:id="@+id/destination_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/time_hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Time"
                            android:layout_alignParentTop="true"
                            android:gravity="top"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:paddingRight="8dp" />

                        <TextView
                            android:id="@+id/date_time_start_choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Feb 9 @ 10PM"
                            android:textColor="@android:color/white"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:textSize="16sp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="16dp"
                            android:layout_toRightOf="@+id/time_hint"
                            android:layout_alignBaseline="@+id/time_hint"/>

                        <TextView
                            android:id="@+id/date_time_end_choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Feb 9 @ 10PM"
                            android:textColor="@android:color/white"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:textSize="16sp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="16dp"
                            android:layout_below="@+id/date_time_start_choice"
                            android:layout_toRightOf="@+id/time_hint"/>

                        <TextView
                            android:id="@+id/btn_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:textAllCaps="true"
                            android:padding="16dp"
                            android:layout_alignParentRight="true"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:layout_alignBottom="@+id/date_time_end_choice"
                            android:text="@string/clear"/>

                    </RelativeLayout>

                </LinearLayout>

            </FrameLayout>

        </android.support.v7.widget.Toolbar>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <ListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textPrimary"
            android:textSize="14sp"
            android:text="@string/loading_message" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/not_waterloo_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/how_do_you_do"
            android:layout_width="300dp"
            android:layout_height="171dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/how_do_you_do_fellow_kids"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/must_be_waterloo"
            android:textSize="16sp"
            android:padding="16dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textPrimary"
            android:gravity="center" />

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:src="@drawable/goose_hiss"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</FrameLayout>